Update Dockerfile to remove warning for native access