@@ -9,4 +9,4 @@ LABEL org.opencontainers.image.source="https://github.com/n0d4n/musicbot"
 
 COPY --from=build /app/target/JMusicBot-Snapshot-All.jar /app/app.jar
 
-CMD ["java", "-Dconfig=/app/config/config.txt", "-jar", "/app/app.jar"]
+CMD ["java", "--enable-native-access=ALL-UNNAMED", "-Dconfig=/app/config/config.txt", "-jar", "/app/app.jar"]
